--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,21 +13,27 @@
   "dependencies": {
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.5.0",
+    "formik": "^2.4.5",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
