End of section 12

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=reactivities.db"
-  }
+  },
+  "TokenKey": "super duper totally 100 percent off the chain secret key for private use only"
 }
